Modificando package.json

--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
 	"name": "PageTransitions",
-	"version": "1.0"
+	"version": "1.0.0",
+	"repository": {
+    	"type": "git",
+    	"url": "https://github.com/jpbaena13/PageTransitions.git"
+  	},
+  	"author": "JpBaena13",
+  	"license": "MIT"
 }
